feat(remove): material, because it 不太好看

--- a/src/simple/index.less
+++ b/src/simple/index.less
@@ -1,18 +1,7 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
+html, body {
   padding: 0;
+  margin: 0;
 }
-
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
 body {
   background-color: #eee;
   color: #3c4858;
@@ -21,17 +10,24 @@ body {
   line-height: 1.5em;
 }
 
-
 .simple {
-  &-sidebar-header{
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  &-sidebar-header {
     display: flex;
     align-items: center;
     padding: 5px 25px;
+
     p {
       color: #666;
       z-index: 2;
     }
   }
+
   &-logo {
     width: 60px;
     height: 60px;
@@ -39,17 +35,19 @@ body {
     background-position: center;
     z-index: 2;
     margin-right: 20px;
-    img{
+
+    img {
       width: 100%;
       height: 100%;
     }
   }
+
   &-layout {
     .content {
       margin-left: 260px;
-      padding: 10px;
     }
   }
+
   &-sidebar {
     position: fixed;
     top: 0;
@@ -144,18 +142,18 @@ body {
 
       & li {
         a {
-          text-transform: capitalize;
           margin: 10px 15px 0;
           border-radius: 3px;
           color: #3c4858;
           padding-left: 10px;
           padding-right: 10px;
           text-transform: capitalize;
+          text-decoration: none;
           font-size: 13px;
           padding: 10px 15px;
         }
 
-        &:hover>a {
+        &:hover>a:not(.active) {
           background-color: hsla(0, 0%, 78%, .2);
           color: #3c4858;
           box-shadow: none;
@@ -174,7 +172,7 @@ body {
           align-items: center;
 
           &>p {
-            margin-left: 20px;
+            margin: 1em 0 1em 20px;
           }
 
           .simple-icon {
@@ -213,6 +211,41 @@ body {
           height: auto;
           white-space: nowrap;
         }
+      }
+    }
+  }
+  .layout {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 100px;
+    &-toolbar {
+      height: 80px;
+      padding: 16px 12px;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      box-shadow: 0 12px 12px -12px rgba(0, 0, 0, .05), 0 4px 15px 0 rgba(0, 0, 0, .05), 0 8px 10px -5px rgba(0, 0, 0, .06);
+    }
+    &-main {
+      padding: 16px;
+    }
+    &-footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100px;
+      text-align: center;
+      padding: 20px;
+      &::before {
+        content: ' ';
+        width: 40%;
+        height: 2px;
+        background-color: rgba(0, 0, 0, .05);
+        position: absolute;
+        top: -2px;
+        left: 50%;
+        transform: translateX(-50%);
       }
     }
   }
